--- a/src/index.haml
+++ b/src/index.haml
@@ -21,3 +21,20 @@
                     %h1 Build the Future
                     %p.lead Description goes here...
                     %a.btn.btn-large.btn-inverse More info &raquo;
+.container
+    .row.center#index
+        .span4
+            .hero-unit#families
+                %h1 Families
+                %p Brief info line
+                %a.btn.btn-large.btn-primary Get resources &raquo;
+        .span4
+            .hero-unit#donors
+                %h1 Donors
+                %p Brief info line
+                %a.btn.btn-large.btn-primary Learn more &raquo;
+        .span4
+            .hero-unit#tutors
+                %h1 Tutors
+                %p Brief info line
+                %a.btn.btn-large.btn-primary Apply today &raquo;
