Changes per Rick's email

--- a/src/_layouts/default.haml
+++ b/src/_layouts/default.haml
@@ -33,7 +33,7 @@
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Our Approach
                                 %span.caret
-                            = submenu(["Our Mission", "Our Vision", "Our Core Values", "Our School Day", "Our Family Partnership"], "Approach")
+                            = submenu(["Our Mission", "Our Vision", "Our Core Values", "Our Family Partnership"], "Approach")
                         %li.dropdown-submenu
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Student Life
@@ -50,7 +50,6 @@
                                 %span.caret
                             = submenu(["Directions", "Enroll Your Child", "Apply to Teach", "Apply to Tutor", "Volunteer"], "Contact")
         = yield :main
-        %hr
         %footer
             .container
                 .pull-left
