--- a/src/index.haml
+++ b/src/index.haml
@@ -1,40 +1,41 @@
-#carousel.carousel.slide
-    .carousel-inner
-        .item.active
-            %img{:src => "/img/index/carousel.1.jpeg"}
-            .container
-                .carousel-caption
-                    %h1 College Starts Here
-                    %p.lead Enroll your child today!
-                    %a.btn.btn-large.btn-inverse More info &raquo;
-        .item
-            %img{:src => "/img/index/carousel.2.jpeg"}
-            .container
-                .carousel-caption
-                    %h1 Close the Gap
-                    %p.lead Engage in volunteer and career opportunities
-                    %a.btn.btn-large.btn-inverse More info &raquo;
-        .item
-            %img{:src => "/img/index/carousel.3.jpeg"}
-            .container
-                .carousel-caption
-                    %h1 Build the Future
-                    %p.lead Description goes here...
-                    %a.btn.btn-large.btn-inverse More info &raquo;
+.container
+    #carousel.carousel.slide
+        .carousel-inner
+            .item.active
+                %img{:src => "/img/index/carousel.1.jpeg"}
+                .container
+                    .carousel-caption
+                        %h1 College Starts Here
+                        %p.lead Enroll your child today!
+                        %a.btn.btn-large.btn-inverse More info &raquo;
+            .item
+                %img{:src => "/img/index/carousel.2.jpeg"}
+                .container
+                    .carousel-caption
+                        %h1 Close the Gap
+                        %p.lead Engage in volunteer and career opportunities
+                        %a.btn.btn-large.btn-inverse More info &raquo;
+            .item
+                %img{:src => "/img/index/carousel.3.jpeg"}
+                .container
+                    .carousel-caption
+                        %h1 Build the Future
+                        %p.lead Description goes here...
+                        %a.btn.btn-large.btn-inverse More info &raquo;
 .container
     .row.center#index
         .span4
             .hero-unit#families
                 %h1 Families
-                %p Brief info line
-                %a.btn.btn-large.btn-primary Get resources &raquo;
+                %p College Starts Here
+                %a.btn.btn-primary Enroll your child &raquo;
         .span4
             .hero-unit#donors
                 %h1 Donors
-                %p Brief info line
-                %a.btn.btn-large.btn-primary Learn more &raquo;
+                %p Build the Future
+                %a.btn.btn-primary Donate &raquo;
         .span4
             .hero-unit#tutors
                 %h1 Tutors
-                %p Brief info line
-                %a.btn.btn-large.btn-primary Apply today &raquo;
+                %p Close the Gap
+                %a.btn.btn-primary Career Opportunites &raquo;
