--- a/src/index.haml
+++ b/src/index.haml
@@ -28,7 +28,7 @@
             .hero-unit#families
                 %h1 Families
                 %p College Starts Here
-                %a.btn.btn-primary Enroll your child &raquo;
+                %a.btn.btn-primary Enroll Your Child &raquo;
         .span4
             .hero-unit#donors
                 %h1 Donors
