--- a/src/index.haml
+++ b/src/index.haml
@@ -33,7 +33,7 @@
             .hero-unit#donors
                 %h1 Donors
                 %p Close the Gap
-                %a.btn.btn-primary Volunteer/Career &raquo;
+                %a.btn.btn-primary Volunteer + Career &raquo;
         .span4
             .hero-unit#tutors
                 %h1 Tutors
