Play with spacing a bit

--- a/src/_layouts/default.haml
+++ b/src/_layouts/default.haml
@@ -46,6 +46,11 @@
                             = submenu(["Achievement Gap", "Our Results"], "Results")
                         %li.dropdown-submenu
                             %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                                Resources
+                                %span.caret
+                            = submenu(["Categories"], "Resources")
+                        %li.dropdown-submenu
+                            %a.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                                 Contact Us
                                 %span.caret
                             = submenu(["Directions", "Enroll Your Child", "Apply to Teach", "Apply to Tutor", "Volunteer"], "Contact")
