--- a/src/css/application.css
+++ b/src/css/application.css
@@ -41,7 +41,7 @@ body {
 
 .dropdown-submenu > .dropdown-menu {
     left: auto;
-    top: 40px;
+    top: 39px;
 }
 
 .nav-tabs > li > a, .nav-pills > li > a {
@@ -181,4 +181,12 @@ footer a:hover {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.3);
+}
+
+#index li {
+    list-style: none;
+}
+
+#index .btn-group {
+    text-align: left;
 }
