--- a/src/index.haml
+++ b/src/index.haml
@@ -26,50 +26,55 @@
     .row.center#index
         .span4
             .hero-unit#families
-                %h1 Families
-                %p College Starts Here
+                %h3 College Starts Here
                 .btn-group.dropup
-                    %a.btn.btn-info.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                    %a.btn.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                         Enroll Your Child
                         %span.caret
                     %ul.dropdown-menu
                         %li
                             %a{:href => ""} Why choose Prodeo Academy?
+                        %li.divider
                         %li
                             %a{:href => ""} Student Application
+                        %li.divider
                         %li
                             %a{:href => ""} Stay in Touch
         .span4
             .hero-unit#donors
-                %h1 Donors
-                %p Close the Gap
+                %h3 Close the Gap
                 .btn-group.dropup
-                    %a.btn.btn-primary.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
-                        Volunteer + Career
+                    %a.btn.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                        Volunteer / Career
                         %span.caret
                     %ul.dropdown-menu
                         %li
                             %a{:href => ""} Why choose Prodeo Academy?
+                        %li.divider
                         %li
                             %a{:href => ""} Who we are looking for
+                        %li.divider
                         %li
                             %a{:href => ""} Apply to Teach
+                        %li.divider
                         %li
                             %a{:href => ""} Apply to Tutor
+                        %li.divider
                         %li
                             %a{:href => ""} Volunteer
         .span4
             .hero-unit#tutors
-                %h1 Tutors
-                %p Build the Future
+                %h3 Build the Future
                 .btn-group.dropup
-                    %a.btn.btn-success.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                    %a.btn.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                         Donate Today
                         %span.caret
                     %ul.dropdown-menu
                         %li
                             %a{:href => ""} Why choose Prodeo Academy?
+                        %li.divider
                         %li
                             %a{:href => ""} Benefactors
+                        %li.divider
                         %li
                             %a{:href => ""} Invest
