Load a bold version of Asap font - fixes #1

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Asap");
+@import url("http://fonts.googleapis.com/css?family=Asap:400,700");
 
 * {
     font-family: 'Asap', sans-serif;
