--- a/src/css/application.css
+++ b/src/css/application.css
@@ -173,6 +173,12 @@ footer a:hover {
     color: #ccc;
 }
 
+.dropup .btn-large .caret {
+    margin-top: 8px;
+    margin-left: 3px;
+    border-width: 7px 5px;
+}
+
 /* *
    * INDEX
    *
@@ -187,14 +193,20 @@ footer a:hover {
     list-style: none;
 }
 
+#index .hero-unit h3 {
+    color: #922628;
+    font-size: 30px;
+}
+
 #index .btn-group {
     text-align: left;
 }
 
 #index .hero-unit {
     padding: 60px 0;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25), 0 2px 10px rgba(0,68,204,.3)
 }
 
 #index .hero-unit .btn {
-    text-transform: uppercase;
+    #text-transform: uppercase;
 }
