--- a/src/index.haml
+++ b/src/index.haml
@@ -28,7 +28,7 @@
             .hero-unit#families
                 %h3 College Starts Here
                 .btn-group.dropup
-                    %a.btn.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                    %a.btn.btn-large.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                         Enroll Your Child
                         %span.caret
                     %ul.dropdown-menu
@@ -44,7 +44,7 @@
             .hero-unit#donors
                 %h3 Close the Gap
                 .btn-group.dropup
-                    %a.btn.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                    %a.btn.btn-large.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                         Volunteer / Career
                         %span.caret
                     %ul.dropdown-menu
@@ -66,7 +66,7 @@
             .hero-unit#tutors
                 %h3 Build the Future
                 .btn-group.dropup
-                    %a.btn.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
+                    %a.btn.btn-large.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
                         Donate Today
                         %span.caret
                     %ul.dropdown-menu
