--- a/src/css/application.css
+++ b/src/css/application.css
@@ -186,7 +186,8 @@ footer a:hover {
 #index .hero-unit {
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.3);
+    padding: 40px 0;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25), 0 2px 10px rgba(0,68,204,.3)
 }
 
 #index li {
@@ -194,17 +195,12 @@ footer a:hover {
 }
 
 #index .hero-unit h3 {
-    color: #922628;
+    color: #2a326f;
     font-size: 30px;
 }
 
 #index .btn-group {
     text-align: left;
-}
-
-#index .hero-unit {
-    padding: 60px 0;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25), 0 2px 10px rgba(0,68,204,.3)
 }
 
 #index .hero-unit .btn {
