Update carousel images

--- a/src/index.haml
+++ b/src/index.haml
@@ -2,21 +2,21 @@
     #carousel.carousel.slide
         .carousel-inner
             .item.active
-                %img{:src => "/img/index/carousel.1.jpeg"}
+                %img{:src => "/img/index/carousel.1.jpg"}
                 .container
                     .carousel-caption
                         %h1 College Starts Here
                         %p.lead Enroll your child today!
                         %a.btn.btn-large.btn-inverse More info &raquo;
             .item
-                %img{:src => "/img/index/carousel.2.jpeg"}
+                %img{:src => "/img/index/carousel.2.jpg"}
                 .container
                     .carousel-caption
                         %h1 Close the Gap
                         %p.lead Engage in volunteer and career opportunities
                         %a.btn.btn-large.btn-inverse More info &raquo;
             .item
-                %img{:src => "/img/index/carousel.3.jpeg"}
+                %img{:src => "/img/index/carousel.3.jpg"}
                 .container
                     .carousel-caption
                         %h1 Build the Future
