Add under construction, redo nav shadows in CSS

--- a/src/_layouts/default.haml
+++ b/src/_layouts/default.haml
@@ -9,6 +9,7 @@
         %link{:href => "/css/application.css", :rel => "stylesheet"}
         %script{:src => "/js/application.js"}
     %body
+        #top
         .container#header
             .row
                 .span4
