Dummy links in footer

--- a/src/_layouts/default.haml
+++ b/src/_layouts/default.haml
@@ -61,6 +61,6 @@
                 .pull-left
                     &copy; Copyright 2012 Prodeo Academy
                 .pull-right
-                    %a{:href => "/terms"} Terms of Use
+                    %a{:href => "#"} Terms of Use
                     |
-                    %a{:href => "/privacy"} Privacy Policy
+                    %a{:href => "#"} Privacy Policy
