Add leadership information to home page

--- a/src/index.haml
+++ b/src/index.haml
@@ -7,74 +7,44 @@
                     .carousel-caption
                         %h1 College Starts Here
                         %p.lead Enroll your child today!
-                        %a.btn.btn-large.btn-inverse More info &raquo;
             .item
                 %img{:src => "/img/index/carousel.2.jpg"}
                 .container
                     .carousel-caption
                         %h1 Close the Gap
                         %p.lead Engage in volunteer and career opportunities
-                        %a.btn.btn-large.btn-inverse More info &raquo;
             .item
                 %img{:src => "/img/index/carousel.3.jpg"}
                 .container
                     .carousel-caption
                         %h1 Build the Future
-                        %p.lead Description goes here...
-                        %a.btn.btn-large.btn-inverse More info &raquo;
+                        %p.lead
 .container
-    .row.center#index
-        .span4
-            .hero-unit#families
-                %h3 College Starts Here
-                .btn-group.dropup
-                    %a.btn.btn-large.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
-                        Enroll Your Child
-                        %span.caret
-                    %ul.dropdown-menu
-                        %li
-                            %a{:href => ""} Why choose Prodeo Academy?
-                        %li.divider
-                        %li
-                            %a{:href => ""} Student Application
-                        %li.divider
-                        %li
-                            %a{:href => ""} Stay in Touch
-        .span4
-            .hero-unit#donors
-                %h3 Close the Gap
-                .btn-group.dropup
-                    %a.btn.btn-large.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
-                        Volunteer / Career
-                        %span.caret
-                    %ul.dropdown-menu
-                        %li
-                            %a{:href => ""} Why choose Prodeo Academy?
-                        %li.divider
-                        %li
-                            %a{:href => ""} Who we are looking for
-                        %li.divider
-                        %li
-                            %a{:href => ""} Apply to Teach
-                        %li.divider
-                        %li
-                            %a{:href => ""} Apply to Tutor
-                        %li.divider
-                        %li
-                            %a{:href => ""} Volunteer
-        .span4
-            .hero-unit#tutors
-                %h3 Build the Future
-                .btn-group.dropup
-                    %a.btn.btn-large.dropdown-toggle{:href => "#", :data => {:toggle => "dropdown"}}
-                        Donate Today
-                        %span.caret
-                    %ul.dropdown-menu
-                        %li
-                            %a{:href => ""} Why choose Prodeo Academy?
-                        %li.divider
-                        %li
-                            %a{:href => ""} Benefactors
-                        %li.divider
-                        %li
-                            %a{:href => ""} Invest
+    .page-header#index
+        %h2 Leadership of Prodeo Academy
+
+    .row
+        .span3
+            .thumbnail
+                %img{:src => "http://placehold.it/210x150"}
+                .caption
+                    %h4 Rick Campion
+                    %p Executive Director
+        .span9
+            %p.lead Rick has experience in developing successful schools for children in Minneapolis. He was a member of the founding leadership team of Cristo Rey Jesuit High School in the Phillips neighborhood of South Minneapolis and the founding board of directors of Minneapolis College Preparatory. He has 14 years of experience as a teacher, and eight years in school administration.
+            %p rickcampion@prodeoacademy.org
+            %p (612) 559-4881
+    %br
+    .row
+        .span9
+            %p.lead Chancey has experience as a teacher in the Uncommon Schools Network at Excellence Boys Charter School in Bedford Stuyvesant, NY. She is completing a Master?s Degree in early literacy at Columbia University. She has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level.
+            %p chanceyanderson@prodeoacademy.org
+            %p (347) 982-5061
+
+        .span3
+            .thumbnail
+                %img{:src => "http://placehold.it/210x150"}
+                .caption
+                    %h4 Chancey Anderson
+                    %p Principal
+%br
