Fix UTF conversion

--- a/src/index.haml
+++ b/src/index.haml
@@ -37,7 +37,7 @@
     %br
     .row
         .span9
-            %p.lead Chancey has experience as a teacher in the Uncommon Schools Network at Excellence Boys Charter School in Bedford Stuyvesant, NY. She is completing a Master?s Degree in early literacy at Columbia University. She has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level.
+            %p.lead Chancey has experience as a teacher in the Uncommon Schools Network at Excellence Boys Charter School in Bedford Stuyvesant, NY. She is completing a Master's Degree in early literacy at Columbia University. She has taught for ten years at the elementary, middle, and high school levels and has developed school-wide and network-wide curricula at each level.
             %p chanceyanderson@prodeoacademy.org
             %p (347) 982-5061
 
